--- a/seleniumjava/test-output/index.html
+++ b/seleniumjava/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sagar\AppData\Local\Temp\testng-eclipse--424103652\testng-customsuite.xml</span>
+                    <span>C:\Users\sagar\AppData\Local\Temp\testng-eclipse--1778047830\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pratcticalexam.slip11.ParallelTest" class="method navigator-link" hash-for-method="verifyLogo">verifyLogo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practicalexam.slip5.DataProvider" class="method navigator-link" hash-for-method="googleSearch(India, Quitab Minar)">googleSearch(India, Quitab Minar)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="pratcticalexam.slip11.ParallelTest" class="method navigator-link" hash-for-method="verifyPageTitle">verifyPageTitle</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practicalexam.slip5.DataProvider" class="method navigator-link" hash-for-method="googleSearch(Agra, Taj Mahal)">googleSearch(Agra, Taj Mahal)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="practicalexam.slip5.DataProvider" class="method navigator-link" hash-for-method="googleSearch(Hyderabad, Charminar)">googleSearch(Hyderabad, Charminar)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">pratcticalexam.slip11.ParallelTest</span>
+              <span class="class-name">practicalexam.slip5.DataProvider</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLogo">
-                  </a> <!-- verifyLogo -->
-                  <span class="method-name">verifyLogo</span>
+                  <a name="googleSearch(India, Quitab Minar)">
+                  </a> <!-- googleSearch(India, Quitab Minar) -->
+                  <span class="method-name">googleSearch</span>
+                  <span class="parameters">(India,Quitab Minar)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyPageTitle">
-                  </a> <!-- verifyPageTitle -->
-                  <span class="method-name">verifyPageTitle</span>
+                  <a name="googleSearch(Agra, Taj Mahal)">
+                  </a> <!-- googleSearch(Agra, Taj Mahal) -->
+                  <span class="method-name">googleSearch</span>
+                  <span class="parameters">(Agra,Taj Mahal)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="googleSearch(Hyderabad, Charminar)">
+                  </a> <!-- googleSearch(Hyderabad, Charminar) -->
+                  <span class="method-name">googleSearch</span>
+                  <span class="parameters">(Hyderabad,Charminar)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sagar\AppData\Local\Temp\testng-eclipse--424103652\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sagar\AppData\Local\Temp\testng-eclipse--1778047830\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +172,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;pratcticalexam.slip11.ParallelTest&quot;/&gt;
+      &lt;class name=&quot;practicalexam.slip5.DataProvider&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;googleSearch&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- practicalexam.slip5.DataProvider --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +216,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLogo')
-data.setCell(0, 2, 'pratcticalexam.slip11.ParallelTest')
-data.setCell(0, 3, 99);
+data.setCell(0, 1, 'googleSearch')
+data.setCell(0, 2, 'practicalexam.slip5.DataProvider')
+data.setCell(0, 3, 8937);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyPageTitle')
-data.setCell(1, 2, 'pratcticalexam.slip11.ParallelTest')
-data.setCell(1, 3, 19);
+data.setCell(1, 1, 'googleSearch')
+data.setCell(1, 2, 'practicalexam.slip5.DataProvider')
+data.setCell(1, 3, 6501);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'googleSearch')
+data.setCell(2, 2, 'practicalexam.slip5.DataProvider')
+data.setCell(2, 3, 6110);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 118 ms</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,23 +259,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">pratcticalexam.slip11.ParallelTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">practicalexam.slip5.DataProvider</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">googleSearch(India, Quitab Minar)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-              <div class="test-method">
-                <span class="method-name">verifyLogo</span>
-                <span class="method-start">2637 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyPageTitle</span>
-                <span class="method-start">2740 ms</span>
+                <span class="method-name">googleSearch(Agra, Taj Mahal)</span>
+                <span class="method-start">8943 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">2763 ms</span>
-              </div> <!-- configuration-test after -->
+              <div class="test-method">
+                <span class="method-name">googleSearch(Hyderabad, Charminar)</span>
+                <span class="method-start">15447 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
